Fix table desalignment

--- a/src/Web/alerts-ui/wwwroot/css/site.css
+++ b/src/Web/alerts-ui/wwwroot/css/site.css
@@ -26,22 +26,29 @@ table, tr {
 }
 
 th {
-    font-size: smaller !important;
     background-color: #8CA9BF;
     border: 1px;
     border-color: #343333 !important;
     position: sticky;
     top: 0;
     text-align:center;
-    font-size: x-large !important;
+    font-size: 26px !important;
 }
 
 td {
     background-color: #F3F3F3;
     cursor: pointer;
-    font-size: large !important;
+    font-size:22px !important;
 }
 
+@media (max-height: 1200px) {
+    table td {
+        font-size: 15px !important;
+    }
+    table th {
+        font-size: 22px !important;
+    }
+}
 
 text-left-align 
 {
@@ -176,8 +183,16 @@ text-left-align
 }
 
 #page {
-    height: 100%;
     width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-height: 1200px) {
+    .scroll-table {
+        max-height: 800px;
+        min-height: 100px;
+        overflow-y: auto;
+    }
 }
 
 #content {
